--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,2 +1,79 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  font-family: "Roboto", Open Sans, Sans-serif;
+  font-size: 16px;
+}
+
+.contenedor {
+  width: 90%;
+  max-width: 1000px;
+  margin: auto;
+  overflow: hidden;
+}
+
+header {
+  width: 100%;
+  background: url("../img/bg.jpg") #281a0c;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center 0;
+}
+
+header .contenedor {
+  position: relative;
+  height: 700px;
+}
+
+header .menu {
+  width: 100%;
+  text-align: right;
+}
+
+header .menu a {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 300;
+  display: inline-block;
+  margin: 40px 20px;
+  text-decoration: none;
+  position: relative;
+  border-bottom: 1px solid transparent;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+}
+
+header .menu a:hover {
+  border-bottom: 1px solid #fff;
+}
+
+header .textos {
+  width: 100%;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  margin-top: -52px;
+}
+
+header .textos .nombre {
+  font-size: 50px;
+  font-weight: 600;
+}
+
+header .textos .nombre span {
+  font-weight: 300;
+  font-style: italic;
+}
+
+header .textos h3 {
+  font-weight: 300;
+  font-size: 23px;
+  font-style: italic;
+}
 /*# sourceMappingURL=estilos.css.map */
