--- a/css/estilos.sass
+++ b/css/estilos.sass
@@ -1,2 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100&display=swap')
+*
+    margin: 0
+    padding: 0
+    box-sizing: border-box
 
+body
+    font-family: "Roboto", Open Sans, Sans-serif
+    font-size: 16px
+    
+.contenedor
+    width: 90%
+    max-width: 1000px
+    margin: auto
+    overflow: hidden
+
+@import header
