Estilos basico de la pagina completado (con diseño adaptativo)

--- a/css/estilos.sass
+++ b/css/estilos.sass
@@ -13,9 +13,15 @@ body
     max-width: 1000px
     margin: auto
     overflow: hidden
-
+//HEADER
 @import header
+//MAIN
 @import main
+//MENU
 @import menu
+//GALERIA Y UBICAION
 @import galeria&ubicacion
+//MAPA Y FOOTER
 @import mapa&footer
+//MEDIA QUERIES
+@import mediaQueries
